# saq-sommelier

./: .dockerignore  .env.example  .env.prod.enc  .env.production  .gitignore  .pip-audit-ignore  .sops.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/commands/: ai.md  branch-status.md  breakdown.md  data.md  eval-pipeline.md  health.md  plan.md  pr.md  prompt.md  qa.md  review.md  roadmap-status.md  security.md  tag.md  ux.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  cve-scan.yml  dependabot-auto-merge.yml
alembic/: env.py
backend/: Dockerfile  __main__.py  app.py  auth.py  config.py  db.py  errors.py  exceptions.py  main.py  metrics.py  pyproject.toml  rate_limit.py  redis_client.py
backend/api/: admin.py  auth.py  chat.py  health.py  products.py  recommendations.py  stores.py  tastings.py  users.py  waitlist.py  watches.py
backend/benchmarks/eval/: levers.md  runner.py  schemas.py
backend/benchmarks/eval/data/: queries.json
backend/eval/: __main__.py  judge.py  levers.md  report.py  runner.py  schemas.py
backend/eval/data/: queries.json  rubric.json
backend/repositories/: chat.py  invites.py  oauth_accounts.py  products.py  recommendations.py  stores.py  tastings.py  users.py  waitlist.py  watches.py
backend/schemas/: auth.py  invite.py  product.py  recommendation.py  store.py  tasting.py  user.py  waitlist.py  watch.py
backend/services/: _anthropic.py  _openai.py  auth.py  chat.py  curation.py  email.py  github_oauth.py  google_oauth.py  intent.py  products.py  recommendations.py  sommelier.py  stores.py  tastings.py  watches.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_auth_service.py  test_chat.py  test_curation.py  test_github_oauth.py  test_google_oauth.py  test_health.py  test_intent.py  test_jwt_middleware.py  test_products.py  test_rate_limit.py  test_recommendations.py  test_redis.py  test_sommelier.py  test_stores.py  test_tastings.py  test_telegram_auth.py  test_users.py  test_waitlist.py  test_watches.py
benchmarks/: README.md
bot/: Dockerfile  pyproject.toml
bot/bot/: __main__.py  api_client.py  app.py  categories.py  config.py  formatters.py  keyboards.py  main.py  middleware.py
bot/bot/handlers/: filters.py  mystores.py  new.py  notifications.py  random.py  recommend.py  start.py  url_paste.py  watch.py
bot/tests/: conftest.py  test_api_client.py  test_app.py  test_categories.py  test_config.py  test_filters.py  test_formatters.py  test_keyboards.py  test_main.py  test_middleware.py  test_mystores.py  test_new.py  test_notifications.py  test_random.py  test_recommend.py  test_start.py  test_url_paste.py  test_watches.py
core/: alembic.ini  categories.py  embedding_client.py  embedding_constants.py  logging.py  pyproject.toml
core/alembic/: env.py  script.py.mako
core/alembic/versions/: 079ed4c8b997_oauth_accounts_table_and_email_display_.py  2f6b0f87907a_rename_pastille_gout_to_taste_tag_and_.py  417779ce6a81_add_watches_table.py  5ee06183fa43_add_chat_session_and_message_tables.py  63fc43757bbb_add_invite_code_tables.py  71be3d37f1fc_add_cascade_delete_on_chat_sessions_.py  730b893703aa_add_indexes_for_search_and_filter_.py  77f251efc3bc_add_last_scraped_hash_to_products.py  a1551e61f3e6_add_product_availability_table.py  a1665520b1d7_phase_6_schema_add_wine_attrs_rename_.py  ac8698d47eee_add_user_store_preferences_table_and_.py  aeebb2d09f16_embed_hash_columns_rename.py  b0bfe635f0c3_add_restock_events_table.py  b5c67feb72f8_initial_schema.py  c2e04e28cb5f_drop_invite_codes_table.py  d54ff3a506b5_add_locale_to_users.py  de3eafa552b5_add_recommendation_logs_table.py  e2b8b4081934_add_store_model.py  e864f62c1048_drop_saq_code_cup_code_currency_from_.py  f0f1335d34a9_add_delisted_at_to_products.py  f416e225ad1f_drop_embedding_input_hash_column.py
core/config/: __init__.py  settings.py  test_utils.py
core/db/: base.py  models.py
deploy/: coupette-scraper.service  deploy-frontend.sh  deploy.sh  deploy_backend.sh  deploy_frontend.sh  saq-availability.service  saq-scraper.service  saq-scraper.timer  saq-watches.service  saq-watches.timer
deploy/systemd/: coupette-availability.service  coupette-availability.timer  coupette-scraper.service  coupette-scraper.timer
docs/: ARCHITECTURE.md  DATA_FLOW.md  DEVELOPMENT.md  ENGINEERING.md  GITHUB-SETUP.md  MIGRATIONS.md  OPERATIONS.md  PRODUCTION.md  PRODUCT_VISION.md  ROADMAP.md  SCALING.md  SCRAPER.md  SECURITY.md  STORE_AVAILABILITY.md  TELEGRAM_BOT.md
docs/decisions/: README.md  (+10 more)
frontend/: .prettierrc  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scraper/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml
scraper/alembic/: README  env.py
scraper/alembic/versions/: dc22508a8f70_create_products_table.py
scraper/scraper/: __main__.py  adobe.py  config.py  constants.py  embed.py  products.py  robots.py  stores.py
scraper/scraper/commands/: __init__.py  availability.py  embed.py  enrich.py  scrape.py  stores.py
scraper/scraper/db/: __init__.py  availability.py  embeddings.py  events.py  products.py  session.py  stores.py
scraper/src/: __main__.py  availability.py  config.py  db.py  embed.py  embed_sync.py  enrich.py  parser.py  products.py  sitemap.py
scraper/tests/: conftest.py  test_adobe.py  test_availability.py  test_config.py  test_db.py  test_db_embeddings.py  test_embed.py  test_embed_sync.py  test_embedding_client.py  test_enrich.py  test_incremental.py  test_main.py  test_parser.py  test_products.py  test_robots.py  test_scrape.py  test_sitemap.py  test_stores.py
scripts/: FINDINGS.md  create_admin.py  deploy-frontend.sh  explore_sitemap.py  fetch_page.py  generate_badges.py
secrets/: monitor-availability.env.enc  monitor-scraper.env.enc
shared/: pyproject.toml
shared/config/: __init__.py  settings.py  test_utils.py
shared/db/: base.py  models.py
(+76 files in other folders)
