[project]
name = "saq-sommelier"
version = "1.0.0"
description = "AI-powered wine recommendation platform — SAQ catalog scraper, Claude RAG, Telegram bot & web app"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = ">=0.115"
uvicorn = { version = ">=0.34", extras = ["standard"] }
sqlalchemy = "^2.0"
asyncpg = "^0.31"
# greenlet: Required by SQLAlchemy for async operations (manages coroutine context switching)
greenlet = "^3.3.2"
anthropic = ">=0.52"
loguru = ">=0.7"
saq-core = {path = "../core", develop = true, extras = ["embeddings"]}

[tool.poetry.group.dev.dependencies]
httpx = ">=0.28"
pytest = ">=8.0"
pytest-asyncio = ">=0.25"
pytest-cov = ">=6.0"
ruff = "^0.15.5"
pip-audit = ">=2.7"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "eval/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
