[project]
name = "coupette-backend"
version = "1.0.0"
description = "AI-powered wine recommendation platform — catalog scraper, Claude RAG, Telegram bot & web app"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = ">=0.136.0"
uvicorn = { version = ">=0.34", extras = ["standard"] }
sqlalchemy = "^2.0"
asyncpg = "^0.31"
# greenlet: Required by SQLAlchemy for async operations (manages coroutine context switching)
greenlet = "^3.4.0"
anthropic = ">=0.96.0"
loguru = ">=0.7"
coupette-core = {path = "../core", develop = true, extras = ["embeddings"]}
pyjwt = "^2.12.0"
prometheus-client = "^0.25.0"
prometheus-fastapi-instrumentator = "^7.1.0"
email-validator = "^2.3.0"
resend = "^2.29.0"
redis = {version = ">=5.0", extras = ["asyncio"]}
slowapi = "^0.1.9"
gunicorn = ">=23.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.28"
pip-audit = ">=2.7"
pytest = ">=9.0.3"
pytest-asyncio = ">=0.25"
pytest-cov = ">=6.0"
ruff = "^0.15.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RET", "RUF", "S", "SIM", "TCH", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "core"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008", "S101", "S105"]
"__main__.py" = ["S104"]
"api/*" = ["B008"]
"auth.py" = ["B008"]
"schemas/*" = ["S105"]
"benchmarks/*" = ["S105"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
