[project]
name = "coupette-bot"
version = "1.0.0"
description = "Telegram bot for Coupette — wine discovery and alerts"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python-telegram-bot = {version = "^22.7", extras = ["job-queue"]}
httpx = ">=0.28"
pydantic-settings = "^2.13"
loguru = ">=0.7"
coupette-core = {path = "../core", develop = true}

[tool.poetry.group.dev.dependencies]
pip-audit = ">=2.7"
pytest = ">=8.0"
pytest-asyncio = ">=0.25"
pytest-cov = ">=6.0"
ruff = "^0.15.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RET", "RUF", "S", "SIM", "TCH", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bot", "core"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
