[tool.poetry]
name = "saq-core"
version = "0.1.0"
description = "Core infrastructure for SAQ Sommelier (models, config, logging)"
packages = [{include = "core", from = ".."}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
loguru = ">=0.7"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
