[project]
name = "saq-core"
version = "1.0.0"
description = "Core infrastructure for SAQ Sommelier (models, config, logging)"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "core", from = ".."}]

[tool.poetry.dependencies]
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
pgvector = ">=0.3"
loguru = ">=0.7"
pydantic-settings = "^2.13"

[tool.poetry.extras]
embeddings = ["openai"]

[tool.poetry.dependencies.openai]
version = ">=1.0"
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
pip-audit = ">=2.7"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
