[tool.poetry]
name = "saq-scraper"
version = "0.1.0"
description = "SAQ product catalog scraper — sitemap-based, ethical"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.28"
beautifulsoup4 = ">=4.12"
lxml = ">=5.3"
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.29"
psycopg2-binary = "^2.9"
python-dotenv = "^1.2.1"
# greenlet: Required by SQLAlchemy for async operations (manages coroutine context switching)
greenlet = "^3.3.1"
saq-shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=6.0"
ruff = "^0.15.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
