[project]
name = "coupette-scraper"
version = "1.0.0"
description = "SAQ product catalog scraper — sitemap-based, ethical"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
httpx = ">=0.28"
beautifulsoup4 = ">=4.12"
lxml = ">=6.1.0"
sqlalchemy = "^2.0"
asyncpg = "^0.31"
# greenlet: Required by SQLAlchemy for async operations (manages coroutine context switching)
greenlet = "^3.4.0"
loguru = ">=0.7"
coupette-core = {path = "../core", develop = true, extras = ["embeddings"]}

[tool.poetry.group.dev.dependencies]
pip-audit = ">=2.7"
pytest = ">=9.0.3"
pytest-asyncio = ">=0.25"
pytest-cov = ">=6.0"
ruff = "^0.15.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["scraper"]
omit = ["tests/*", "*/robots.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "RET", "RUF", "S", "SIM", "TCH", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["scraper", "core"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]
"scraper/{products,sitemap}.py" = ["S314"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
