[tool.poetry]
name = "saq-shared"
version = "0.1.0"
description = "Shared models and config for SAQ Sommelier"
packages = [{include = "shared", from = ".."}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0"
loguru = ">=0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
